--- a/site/assets/less/flexi_shared.less
+++ b/site/assets/less/flexi_shared.less
@@ -43,6 +43,15 @@ body  .ui-dialog.fc-fixed-dialog + .ui-widget-overlay {
 }
 
 
+/********************
+ * Modal window fixes
+ ********************/
+/* Fix for <button> with bootstrap btn classes not showing contents */
+body .ui-widget button { font-size: small; }
+/* Other minor */
+body .ui-widget a.btn.btn-success, body .ui-widget a.btn.btn-info { color: white; }
+
+
 /**********************
  * yet unclassified CSS
  **********************/
